# IndustriConnect-MCPs

./: README.md
ADS-Project/: README.md
ADS-Project/ads-mock-plc/: ads_mock_plc.py  pyproject.toml
ADS-Project/ads-npm/: README.md  package.json
ADS-Project/ads-npm/src/: index.ts
ADS-Project/ads-python/: README.md  pyproject.toml
ADS-Project/ads-python/src/ads_mcp/: __init__.py  ads_client.py  cli.py  server.py
BACnet-Project/: .gitignore  README.md
BACnet-Project/bacnet-mock-device/: README.md  bacnet_mock_device.py  pyproject.toml
BACnet-Project/bacnet-npm/: README.md  mcp-config-example.json  package.json
BACnet-Project/bacnet-npm/src/: index.ts
BACnet-Project/bacnet-python/: README.md  pyproject.toml
BACnet-Project/bacnet-python/src/bacnet_mcp/: __init__.py  bacnet_client.py  cli.py  server.py  tools.py
DNP3-Project/: README.md
DNP3-Project/dnp3-mock-outstation/: README.md  dnp3_mock_outstation.py  pyproject.toml
DNP3-Project/dnp3-npm/: .gitignore  README.md  mcp-config-example.json  package.json
DNP3-Project/dnp3-npm/src/: index.ts
DNP3-Project/dnp3-python/: README.md  pyproject.toml
DNP3-Project/dnp3-python/src/dnp3_mcp/: __init__.py  cli.py  dnp3_master.py  server.py  tools.py
EtherCAT-Project/: README.md
EtherCAT-Project/ethercat-mock-slave/: Dockerfile  README.md  ethercat_mock_slave.py  pyproject.toml  run-container.sh
EtherCAT-Project/ethercat-npm/: README.md  mcp-config-example.json  package.json
EtherCAT-Project/ethercat-npm/src/: esiParser.ts  index.ts
EtherCAT-Project/ethercat-python/: .gitignore  README.md  pyproject.toml
EtherCAT-Project/ethercat-python/src/ethercat_mcp/: __init__.py  cli.py  ec_master.py  esi_parser.py  server.py  tools.py
EtherNetIP-Project/: .gitignore  README.md
EtherNetIP-Project/ethernetip-mock-server/: README.md  eip_mock_server.py  pyproject.toml
EtherNetIP-Project/ethernetip-npm/: README.md  mcp-config-example.json  package.json  tsconfig.json
EtherNetIP-Project/ethernetip-npm/src/: index.ts  types.d.ts
EtherNetIP-Project/ethernetip-python/: README.md  pyproject.toml
EtherNetIP-Project/ethernetip-python/src/ethernetip_mcp/: __init__.py  cli.py  eip_client.py  server.py  tools.py
FINS-Project/: .gitignore  README.md
FINS-Project/fins-mock-plc/: fins_mock_plc.py  pyproject.toml
FINS-Project/fins-npm/: README.md  package.json
FINS-Project/fins-npm/src/: index.ts
FINS-Project/fins-python/: README.md  pyproject.toml
FINS-Project/fins-python/src/fins_mcp/: __init__.py  cli.py  fins_client.py  server.py
MCP-IDE/: app.js  connections.js  index.html  monitor.js  style.css
MELSEC-Project/: README.md
MELSEC-Project/melsec-mock-plc/: README.md  melsec_mock_plc.py  pyproject.toml
MELSEC-Project/melsec-npm/: README.md  mcp-config-example.json  package.json  tsconfig.json
MELSEC-Project/melsec-npm/src/: index.ts
MELSEC-Project/melsec-python/: README.md  pyproject.toml
MELSEC-Project/melsec-python/src/melsec_mcp/: __init__.py  cli.py  mc_client.py  server.py  tools.py
MODBUS-Project/: README.md
MQTT-Project/: README.md
MQTT-Project/mqtt-mock-server/: README.md  mqtt_mock_server.py  pyproject.toml
MQTT-Project/mqtt-npm/: .gitignore  README.md  mcp-config-example.json  package-lock.json  package.json  tsconfig.json
MQTT-Project/mqtt-npm/src/: index.ts
MQTT-Project/mqtt-python/: README.md  pyproject.toml
MQTT-Project/mqtt-python/src/mqtt_mcp/: cli.py  mqtt_server.py
OPCUA-Project/: README.md
OPCUA-Project/opcua-local-server/: opcua_local_server.py
OPCUA-Project/opcua-mcp-npx-server/: README.md  mcp-config-example.json  package.json
OPCUA-Project/opcua-mcp-npx-server/src/: index.ts
PROFIBUS-Project/: README.md
PROFIBUS-Project/profibus-mock-slave/: README.md  profibus_mock_slave.py  pyproject.toml
PROFIBUS-Project/profibus-npm/: README.md  mcp-config-example.json  package.json
PROFIBUS-Project/profibus-npm/src/: gsdParser.ts  index.ts
PROFIBUS-Project/profibus-python/: README.md  pyproject.toml
PROFIBUS-Project/profibus-python/src/profibus_mcp/: __init__.py  cli.py  gsd_parser.py  pb_master.py  server.py  tools.py
PROFINET-Project/: README.md
PROFINET-Project/profinet-mock-server/: README.md  profinet_mock_device.py  pyproject.toml
PROFINET-Project/profinet-npm/: README.md  mcp-config-example.json  package.json
PROFINET-Project/profinet-npm/src/: gsdParser.ts  index.ts
PROFINET-Project/profinet-python/: README.md  pyproject.toml
S7comm-Project/: .gitignore  README.md
S7comm-Project/s7comm-mock-server/: .gitignore  Dockerfile  README.md  TEST_SCENARIOS.md  pyproject.toml  run-docker.sh  s7_mock_server.py
S7comm-Project/s7comm-npm/: .gitignore  README.md  mcp-config-example.json  package.json
S7comm-Project/s7comm-npm/src/: index.ts  types.d.ts
S7comm-Project/s7comm-python/: .gitignore  README.md  pyproject.toml
S7comm-Project/s7comm-python/src/s7comm_mcp/: __init__.py  cli.py  s7_client.py  server.py  tools.py
docs/MCP-ui/: example.mcp.json  mcp-ui-client-plan.md
docs/roadmap/: ADS_PLAN.md  BACNET_PLAN.md  DNP3_PLAN.md  ETHERCAT_PLAN.md  ETHERNETIP_PLAN.md  FINS_PLAN.md  MELSEC_PLAN.md  PLAN.md  PROFIBUS_PLAN.md  PROFINET_PLAN.md  S7COMM_PLAN.md
mcp-gateway/: index.mjs  package-lock.json  package.json
mcp-manager-ui/: .env.example  MCP_QUICKSTART.md  README.md  index.html  mcp-config-example.json  package-lock.json  package.json  tailwind.config.js
mcp-manager-ui/mcp-backend/: package-lock.json  package.json
mcp-manager-ui/mcp-backend/src/: index.ts  mcp-manager.ts  types.ts  websocket-server.ts
mcp-manager-ui/src/: App.tsx  index.css  types.ts
mcp-manager-ui/src/components/: ChatPanel.tsx  MCPConfigModal.tsx  MCPServerConfig.tsx  MCPServerList.tsx  Sidebar.tsx  ThemeProvider.tsx
mcp-manager-ui/src/data/: mcpTemplates.ts
mcp-manager-ui/src/types/: mcp-types.ts
mcp-ui-client/: .env.example  README.md  mcp.json  package-lock.json  package.json  tsconfig.json
mcp-ui-client/src/: config.ts  index.ts
ui/: QUICKSTART.md  README.md  package.json
ui/src/: App.tsx  types.ts
whitepaper/: README.md
(+21 files in other folders)
