[project]
name = "ads-mock-plc"
version = "0.1.0"
description = "Mock TwinCAT PLC for ADS Protocol testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ads-mock-plc = "ads_mock_plc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
