[project]
name = "bacnet-mock-device"
version = "0.1.0"
description = "Mock BACnet/IP device for MCP testing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
bacnet-mock-device = "bacnet_mock_device:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
