[project]
name = "melsec-mock-plc"
version = "0.1.0"
description = "Mock MELSEC PLC for MC protocol testing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
melsec-mock-plc = "melsec_mock_plc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
