[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mqtt-mcp"
version = "0.1.1"
description = "MQTT + Sparkplug B MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.1",
    "paho-mqtt>=1.6.1",
    "protobuf>=4.24.0",
]

[project.scripts]
mqtt-mcp = "mqtt_mcp.cli:main"

