[project]
name = "profibus-mock-slave"
version = "0.1.0"
description = "Mock PROFIBUS DP slave for MCP integration tests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
profibus-mock-slave = "profibus_mock_slave:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
