[project]
name = "profinet-mock-server"
version = "0.1.0"
description = "Mock PROFINET IO device for MCP integration tests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
profinet-mock-server = "profinet_mock_device:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "profinet_mock_device.py",
  "README.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "profinet_mock_device.py",
  "README.md",
]
